test/cases/initialisation/unbraced/unbraced_toplvl_struct.c
// RUN: %check -e %s

struct A { int i; } b = 2; // CHECK: error: struct A must be initialised with an initialiser list
